# cellshape-voxel

./: .bumpversion.cfg  CITATION.cff  LICENSE  README.md  setup.cfg  setup.py
cellshape_voxel/: __init__.py  autoencoder.py  datasets.py  losses.py  training_functions.py  voxel_autoencoder.py
cellshape_voxel/decoders/: trans_convolutional.py
cellshape_voxel/encoders/: convolutional.py  resnet.py
docs/: CONTRIBUTING.md
docs/notebooks/: training_example.ipynb
